# StackPack

./: .gitignore  Makefile  Makefile.am  README  aclocal.m4  config.h  config.status  config.status.lineno  configure.in  configure.in.bak  libtool  stackpack.conf  stackpack.gam
.anjuta/: default.profile  dock-layout.xml
.anjuta/session/: anjuta.session  dock-layout.xml
gtk/: .anjuta_sym_db.db  .tm_project.cache  .tm_project2.cache  Makefile  Makefile.am  Makefile.in  StackPack.gladep  StackPack.prj  StackPack.pws  config.h  config.status  configure  configure.ac  libtool  stackpack.conf  stackpack.gam
gtk/.anjuta/: anjuta.session  default.anjuta
gtk/.anjuta/session/: anjuta.session  dock-layout.xml
gtk/po/: Makefile  POTFILES
gtk/src/: EnterNameDlg.c  EnterNameDlg.h  Makefile  Makefile.am  StackPackEngine.c  StackPackEngine.h  StackPackEngine.out  classic.gam  cool.gam  gameData.c  gameData.h  junior.gam  main.c  preferences.c  preferences.h  propertiesDlg.c  propertiesDlg.h  scoresDlg.c  scoresDlg.h  stackpack  stackpack.conf  stackpack.gam  userData.c  userData.h  view.c  view.h
gtk/src/.deps/: Customize.Po  EnterNameDlg.Po  StackPackEngine.Po  callbacks.P  gameData.P  gameData.Po  main.P  main.Po  preferences.Po  propertiesDlg.Po  scoresDlg.P  scoresDlg.Po  userData.Po  view.Po
po/: Makefile.in  POTFILES.in
res/: screens.xpm
src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c-old  callbacks.h-old  main.c  main.c~  mania.gam  preferences.c~  propertiesDlg.c~  propertiesDlg.h  propertiesDlg.h~  scoresDlg.c  stackpack.gam  userData.h  view.c
src/.deps/: EnterNameDlg.P  EnterNameDlg.Po  StackPackEngine.P  main.Po  scoresDlg.Po  userData.P  userData.Po  view.P
wtl/: AboutDlg.h  ControlsDlg.h  CustomizeDlg.h  EnterHighScore.h  FileDlg.h  HighSoreDisplay.h  MainFrm.h  NewGameDlg.h  Properties.h  Random.c  StackPack.cpp  StackPack.h  StackPack.rc  StackPack.sln  StackPack.vcproj  StackPackDoc.h  StackPackEngine.cpp  StackPackEngine.h  StackPackView.h  resource.h  stdafx.cpp  stdafx.h
wtl/Help/: StackPack.chm  StackPack.hhp  Table of Contents.hhc
wtl/Help/html/: copyright.htm  customise.htm  filemenu.htm  gamemenu.htm  helpmenu.htm  index.htm  intro.htm  lowest.htm  newgame.htm  optionsmenu.htm  play.htm  scoring.htm  technical.htm  uninstall.htm
wtl/res/: StackPack.exe.manifest
