## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = stackpack

stackpack_SOURCES = \
	StackPackEngine.h\
	StackPackEngine.c\
	view.c\
	view.h\
	userData.h\
	gameData.h\
	userData.c\
	gameData.c\
	scoresDlg.c\
	scoresDlg.h\
	main.c\
	EnterNameDlg.c\
	EnterNameDlg.h\
	preferences.c\
	preferences.h \
	propertiesDlg.c \
	propertiesDlg.h

stackpack_LDFLAGS = 

stackpack_LDADD =  \
	$(PACKAGE_LIBS)

