## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = \
	stackpack

stackpack_SOURCES = \
	EnterNameDlg.c\
	EnterNameDlg.h \
	gameData.c \
	gameData.h \
	main.c \
	preferences.c \
	preferences.h \
	propertiesDlg.c \
	propertiesDlg.h \
	scoresDlg.c \
	scoresDlg.h \
	StackPackEngine.c \
	StackPackEngine.h \
	userData.c \
	userData.h \
	view.c \
	view.h

